Bug 289905 - Sent mail is stored in wrong folder
Summary: Sent mail is stored in wrong folder
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: 4.7
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-27 08:12 UTC by Lukas Polacek
Modified: 2012-01-12 17:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lukas Polacek 2011-12-27 08:12:21 UTC
Version:           4.7 (using KDE 4.7.3) 
OS:                Linux

Some folders in my inbox have the property "Keep replies in the same folder" set, some don't. Now if one of such folders (with the property set) is currently open and I write a new e-mail, it's stored in this folder instead of the sent-mail folder.

Reproducible: Always

Steps to Reproduce:
1. Set folder to "keep replies in the same folder".
2. Open the folder and start writing a new e-mail.
3. Send the e-mail.

Actual Results:  
The e-mail is stored in the open folder, even though it's not a reply. It might even end up in a different account.

Expected Results:  
The e-mail should have been stored in the sent-mail folder given by the identity used for sending.
Comment 1 Laurent Montel 2012-01-12 08:05:31 UTC
I confirm it. Will look at soon
Comment 2 Laurent Montel 2012-01-12 16:54:03 UTC
Git commit a5033b5a830e06a3669d5a9529b6b2d290b92d9d by Montel Laurent.
Committed on 12/01/2012 at 17:52.
Pushed by mlaurent into branch 'master'.

Fix Bug 289905 - Sent mail is stored in wrong folder

Option is for reply/forward not when we create new message
FIXED-IN: 4.8.1

M  +3    -0    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/a5033b5a830e06a3669d5a9529b6b2d290b92d9d
Comment 3 Laurent Montel 2012-01-12 16:54:32 UTC
Git commit 5b7f77f4de10103694e3f8ac6c31932cf7fb89ba by Montel Laurent.
Committed on 12/01/2012 at 17:52.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 289905 - Sent mail is stored in wrong folder

Option is for reply/forward not when we create new message
FIXED-IN: 4.8.1
(cherry picked from commit a5033b5a830e06a3669d5a9529b6b2d290b92d9d)

M  +3    -0    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/5b7f77f4de10103694e3f8ac6c31932cf7fb89ba
Comment 4 Laurent Montel 2012-01-12 16:55:02 UTC
Git commit cf948f25dd12e1dda4fd37ccc960604e9064ac38 by Montel Laurent.
Committed on 12/01/2012 at 17:52.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix Bug 289905 - Sent mail is stored in wrong folder

Option is for reply/forward not when we create new message
FIXED-IN: 4.8.1
(cherry picked from commit a5033b5a830e06a3669d5a9529b6b2d290b92d9d)

M  +3    -0    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/cf948f25dd12e1dda4fd37ccc960604e9064ac38
Comment 5 Lukas Polacek 2012-01-12 17:06:04 UTC
Thanks for the fix! I'll try it out, although it might take some time.