Fix Bug 289905 - Sent mail is stored in wrong folder

Option is for reply/forward not when we create new message
BUG: 289905
FIXED-IN: 4.8.1